--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,3 +72,30 @@ services:
         ASPNETCORE_Kestrel__Certificates__Default__Password: "P@55w0rd"
         ASPNETCORE_HTTPS_PORT: 2001
         ASPNETCORE_HTTP_PORT: 2000
+   orders:
+    depends_on:
+        - main.database
+        - rabbitmq
+    image: free-parking-system-orders
+    build: 
+        context: .
+        dockerfile: .\src\Orders\FreeParkingSystem.Orders.API\dockerfile
+    ports: 
+        - "3000:80"
+        - "3001:443"
+    volumes: 
+        - ${HOME}/.aspnet/https/:/https/
+    environment: 
+        Deployment_Environment_Name: "Staging" 
+        Deployment_LogLevel_Default: "Information"
+        Deployment_Db_Server: "main.database,1433"
+        Deployment_Db_Name: "FreeParkingSystem.Database"
+        Deployment_Db_User: "sa" 
+        Deployment_Db_Password: "S1mple@password" 
+        Deployment_PasswordOptions_MinimumCharacters: 4
+        ASPNETCORE_ENVIRONMENT: "Staging"
+        ASPNETCORE_URLS: "https://+;http://+"
+        ASPNETCORE_Kestrel__Certificates__Default__Path: "/https/aspnetapp.pfx"
+        ASPNETCORE_Kestrel__Certificates__Default__Password: "P@55w0rd"
+        ASPNETCORE_HTTPS_PORT: 3001
+        ASPNETCORE_HTTP_PORT: 3000
