--- a/src/Orders/FreeParkingSystem.Orders.API/appsettings.json
+++ b/src/Orders/FreeParkingSystem.Orders.API/appsettings.json
@@ -1,8 +1,91 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"ConnectionStrings": {
+		"ParkingDbContext": "Server=localhost,3306;Database=FreeParkingSystem.Database;user id=sa;password=S1mple@password"
+	},
+	"EncryptionOptions": {
+		"SecretKey": [
+			237,
+			201,
+			222,
+			52,
+			18,
+			152,
+			49,
+			135,
+			198,
+			143,
+			48,
+			247,
+			22,
+			185,
+			5,
+			216,
+			43,
+			6,
+			37,
+			243,
+			13,
+			52,
+			149,
+			119,
+			74,
+			104,
+			70,
+			130,
+			246,
+			76,
+			231,
+			147
+		]
+	},
+	"jwt": {
+		"ExpiresAfter": "02:00:00",
+		"ValidAudience": "https://localhost:1001",
+		"ValidIssuer": "https://localhost:1001",
+		"Secret": [
+			136,
+			38,
+			156,
+			175,
+			160,
+			81,
+			194,
+			150,
+			227,
+			195,
+			234,
+			132,
+			218,
+			208,
+			150,
+			19,
+			26,
+			78,
+			103,
+			172,
+			41,
+			174,
+			253,
+			245,
+			175,
+			135,
+			197,
+			48,
+			23,
+			169,
+			234,
+			162
+		]
+	},
+	"rabbitmq": {
+		"queueName": "ParkingDefault",
+		"hostName": "localhost",
+		"port": 5672
+	}
 }
